--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,11 +3,11 @@ layout: default
 ---
 <div class="post">
 
-  <header class="post-header">
+  <header>
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  <article class="post-content">
+  <article>
     {{ content }}
   </article>
 
