MBH: adding visual comment to show where to add new topics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
         <h5>Topics:</h5>
         <a href="{{ '/openid/' | prepend: site.baseurl }}" class="list-group-item">Open ID</a>
         <a href="{{ '/wget/' | prepend: site.baseurl }}" class="list-group-item">WGET</a>
+        <!-- Add new topics above  -->
       </div>
     </div><!--/.sidebar-offcanvas-->
     
