TR: Topics changed: now exactly one in each question

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,15 +28,12 @@
       <div class="list-group">
         <br/>
         <h5>Topics:</h5>
+        <a href="{{ '/general/' | prepend: site.baseurl }}" class="list-group-item">general</a>
+        <a href="{{ '/search/' | prepend: site.baseurl }}" class="list-group-item">search</a>
+        <a href="{{ '/search/' | prepend: site.baseurl }}" class="list-group-item">search</a>
         <a href="{{ '/download/' | prepend: site.baseurl }}" class="list-group-item">download</a>
         <a href="{{ '/wget/' | prepend: site.baseurl }}" class="list-group-item">wget</a>
-        <a href="{{ '/HTTP/' | prepend: site.baseurl }}" class="list-group-item">HTTP</a>
-        <a href="{{ '/OPENDAP/' | prepend: site.baseurl }}" class="list-group-item">OPENDAP</a>
-        <a href="{{ '/login/' | prepend: site.baseurl }}" class="list-group-item">login</a>
-        <a href="{{ '/search/' | prepend: site.baseurl }}" class="list-group-item">search</a>
         <a href="{{ '/data/' | prepend: site.baseurl }}" class="list-group-item">data</a>
-        <a href="{{ '/CMIP5/' | prepend: site.baseurl }}" class="list-group-item">CMIP5</a>
-        <a href="{{ '/CORDEX/' | prepend: site.baseurl }}" class="list-group-item">CORDEX</a>
         <a href="{{ '/support/' | prepend: site.baseurl }}" class="list-group-item">support</a>
       </div>
     </div><!--/.sidebar-offcanvas-->
