TR: Bug corrected (search occurred twice)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
         <br/>
         <h5>Topics:</h5>
         <a href="{{ '/general/' | prepend: site.baseurl }}" class="list-group-item">general</a>
-        <a href="{{ '/search/' | prepend: site.baseurl }}" class="list-group-item">search</a>
+        <a href="{{ '/login/' | prepend: site.baseurl }}" class="list-group-item">login</a>
         <a href="{{ '/search/' | prepend: site.baseurl }}" class="list-group-item">search</a>
         <a href="{{ '/download/' | prepend: site.baseurl }}" class="list-group-item">download</a>
         <a href="{{ '/wget/' | prepend: site.baseurl }}" class="list-group-item">wget</a>
